Fixing range z-index

--- a/src/cdn/elements/sliders.css
+++ b/src/cdn/elements/sliders.css
@@ -35,8 +35,7 @@
   pointer-events: none;
   width: 100%;
   height: 0.25rem;
-  border-radius: 1rem;
-  background: var(--active);
+  background: none;
   z-index: 1;
   padding: 0;
   margin: 0;
@@ -121,4 +120,13 @@
 
 .field > .slider {
   width: 100%;
+}
+
+.slider::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0.25rem;
+  border-radius: 1rem;
+  background: var(--active);
 }
